--- a/make-it-snow/index.html
+++ b/make-it-snow/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Auto Write Text</title>
-    <link rel="stylesheet" href="./style.css">
+    <title>Document</title>
+    <script src="https://kit.fontawesome.com/a265046be9.js" crossorigin="anonymous"></script>
     <script src="./script.js" defer></script>
+    <link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
+    
+    <!-- <i class="fas fa-snowflake"></i> -->
+    
+
 </body>
 </html>
